# simplelib

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsebigzip.cpp  parsebigzip.h  resource.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  simplelib.pro  smplibdatabase.cpp  smplibdatabase.h
quazip/: CMakeLists.txt  quaadler32.cpp  quazip.h  quazip.pro  unzip.c  zip.c
